--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "build/index.css",
   "scripts": {
-    "build": "node-sass-chokidar index.sass build/index.css"
+    "build": "node-sass-chokidar index.sass build/index.css",
+    "start": "npm-watch"
+  },
+  "watch": {
+    "build": "index.sass"
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,7 @@
   "homepage": "https://github.com/krisoae/myBootstrap3#readme",
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
-    "node-sass-chokidar": "0.0.3"
+    "node-sass-chokidar": "0.0.3",
+    "npm-watch": "^0.2.0"
   }
 }
